# cleva-dialect

./: .gitignore  Cargo.toml  DOCS.md  README.md  config.toml
src/: main.rs
tree-sitter-cleva/: .gitignore  Cargo.toml  README.md  c_grammar.js  grammar.js
tree-sitter-cleva/bindings/rust/: build.rs  lib.rs
tree-sitter-cleva/src/: grammar.json  parser.c
