[package]
name = "cleva-dialect-transpiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.7", features = ["derive"] }
figment = { version = "0.10.19", features = ["toml", "env"] }
serde = { version = "1.0.203", features = ["derive"] }
tree-sitter = "0.22.6"
tree-sitter-cleva = { path = "./tree-sitter-cleva" }
# tree-sitter-cleva = {version = "0.21.4", package = "tree-sitter-c"}
